--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#A00FBE;
+    background-color:#00BEBE;
     font-family: sans-serif;
     text-align: center;
     margin: 0px;
